syntax = "proto3";

package user;

service UserService {
  rpc GetFilteredUsers (Empty) returns (UserList) {}
}

message Empty {}

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message UserList {
  repeated User users = 1;
} 